# slabpreproc

./: README.md  pyproject.toml  requirements.txt  setup.py
scqc/: __main__.py  atlas_wf.py  bold_families.py  func_preproc_wf.py  melodic_wf.py  qc_workflow.py  scqc_wf.py  utils.py  wf_atlas.py  wf_derivatives.py  wf_func_preproc.py  wf_qc.py  wf_scqc.py
scqc/main/: graph.json  graph1.json
slabpreproc/: __main__.py  wf_derivatives.py  wf_func_preproc.py  wf_main.py  wf_melodic.py  wf_preproc.py  wf_qc.py
slabpreproc/interfaces/: __init__.py  complexbold.py  derivatives.py  dropout.py  fmapref.py  labelstats.py  melmask.py  motion.py  phaseunwrap.py  report.py  seepiref.py  summaryreport.py  topupencfile.py
slabpreproc/utils/: __init__.py  graphics.py  reportpdf.py
slabpreproc/workflows/: __init__.py  alff.py  alff_wf.py  confounds_wf.py  denoising_wf.py  derivatives_wf.py  func_preproc.py  func_preproc_wf.py  func_surf_wf.py  func_wf.py  icafix_wf.py  melodic_wf.py  qc.py  qc_wf.py  registration_wf.py  resamp_epi2tpl_wf.py  resampling.py  surface_wf.py  template.py  template_reg_wf.py  template_wf.py  toplevel.py  toplevel_wf.py  topup_wf.py
slabpreproc/workflows/fmriprep/: resampling.py
subcortical-qc/: __main__.py  alff_wf.py  atlas_wf.py  func_preproc_wf.py  qc_workflow.py  utils.py
